@startuml
!include style.puml
skinparam arrowThickness 1.1
skinparam arrowColor MODEL_COLOR
skinparam classBackgroundColor MODEL_COLOR
package Person {
Class UniquePersonList
Class Person
Class Name
Class Phone
Class Email
Class Telegram
Class Tag
}
package Event {
Class UniqueEventList
class Event
class EventName
}
AddressBook *--> "1" UniquePersonList
AddressBook *-down-> "1" UniqueEventList
AddressBook *-right-> "1" UniqueTagList
UniqueTagList -[hidden]down- UniquePersonList
UniqueTagList -[hidden]down- UniquePersonList

UniqueTagList *-right-> "*" Tag
UniquePersonList -right-> Person
UniqueEventList -down-> Event

Person -up-> "*" Tag

Person *--> Name
Person *--> Phone
Person *--> Email
Person *--> Telegram

Event *--> EventName
Event -up-> "1" UniquePersonList
@enduml
